people, our work html & about_nec navbar fix

--- a/public/about_nec.html
+++ b/public/about_nec.html
@@ -28,6 +28,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
     Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+    <script src="js/about_nec.js" defer></script>
+
 </head>
 <body>
 <!--Header-->
@@ -81,8 +84,7 @@
                     <li style="font-size: medium">
                         <a class="nav-link login" href="/login">Login</a>
                         <a class="nav-link login" href="/register">Register</a>
-                        <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname"
-                                                                                                  href="/account"></a>
+                        <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname" href="/account"></a>
                         </div>
                         <a class="nav-link active logout" href="/logout">Log out</a>
                     </li>
