--- a/public/our_work.html
+++ b/public/our_work.html
@@ -27,8 +27,8 @@
     <!--    Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
+    Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <!--    JS-->
     <script src="js/our_work.js" defer></script>
@@ -100,18 +100,26 @@
 
 <div class="container">
     <h1 id="our_work_header">Our Work</h1>
+    <div class="group">
+        <h3 class="h">Spotlight</h3>
+        <div class="row" id="spotlight" ></div>
+    </div>
+    <div class="group">
+        <h3 class="h">Public Programs</h3>
+        <div class="row" id="public_programs" ></div>
+    </div>
+    <div class="group">
+        <h3 class="h">Public Lectures</h3>
+        <div class="row" id="public_lectures" ></div>
+    </div>
+    <div class="group">
+        <h3 class="h">Readers</h3>
+        <div class="row" id="readers" ></div>
+    </div>
 
-    <h3 class="h">Spotlight</h3>
-    <div class="row" id="spotlight" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 
-    <h3 class="h">Public Programs</h3>
-    <div class="row" id="public_programs" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 
-    <h3 class="h">Public Lectures</h3>
-    <div class="row" id="public_lectures" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 
-    <h3 class="h">Readers</h3>
-    <div class="row" id="readers" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 </div>
 
 <!--Footer-->
