--- a/public/our_work_detail.html
+++ b/public/our_work_detail.html
@@ -26,8 +26,9 @@
     <!--    Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
+    Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
+
 
     <!--    JS-->
     <script src="js/our_work_detail.js" defer></script>
@@ -98,7 +99,7 @@
 
 <section class="container" id="work_info"> <!--    Fill this out-->
     <div class="row">
-        <img id="img" src="" style="width: 50%">
+        <img id="img" src="">
     </div>
     <div class="row">
         <h2 id="title"></h2>
@@ -112,10 +113,11 @@
     <div class="row">
         <div id="bios"></div>
     </div>
+    <div>
+        <a class="btn btn-lg btn-primary" href="our_work.html" id="back_button">Back</a>
+    </div>
 </section>
-<div>
-    <a class="btn btn-lg btn-primary" href="our_work.html" id="back_button">Back</a>
-</div>
+
 
 <!--Footer-->
 <section id="footer">
