--- a/public/person_detail.html
+++ b/public/person_detail.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/person_detail.css">
+
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -97,25 +99,18 @@
 </section>
 
 <section class="container" id="person_info"> <!--    Fill this out-->
-    <div class="row">
-        <img id="img" src="" style="width: 50%">
-    </div>
-    <div class="row">
-        <div class="col-5">Name:</div>
-        <div class="col-7" id="name"></div>
-    </div>
-    <div class="row">
-        <div class="col-5">Role:</div>
-        <div class="col-7" id="role"></div>
-    </div>
-    <div class="row">
-        <div class="col-5">Bio:</div>
-        <div class="col-7" id="bio"></div>
+    <div class="person-profile row">
+        <div class="col-lg-5 col-md-6 col-sm-12">
+            <img class="profile_img" id="img" src="" >
+        </div>
+        <div class="col-lg-7 col-md-6 col-sm-12">
+            <h3 id="name"></h3>
+            <div id="role"></div>
+            <div id="bio"></div>
+            <a class="btn btn-lg" href="people.html" id="back_button" >Back</a>
+        </div>
     </div>
 </section>
-<div>
-    <a class="btn btn-lg" href="people.html" id="back_button" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Back</a>
-</div>
 
 <!--Footer-->
 <section id="footer">
