--- a/public/event_detail.html
+++ b/public/event_detail.html
@@ -95,6 +95,11 @@
 </section>
 
 <!--Body-->
+<section id="controls">
+    <div class="d-flex justify-content-end mx-5">
+        <a class="btn btn-lg btn-primary" href="events.html" id="back_button" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Back</a>
+        <button class="btn btn-lg btn-primary" onclick="onLikeEvent()" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Interested!</button>    </div>
+</section>
 <section class="container" id="event_info"> <!--    Fill this out-->
     <div class="row">
         <div class=" imgDiv col-lg-4 col-md-6 col-sm-12">
@@ -110,8 +115,8 @@
             </div>
         </div>
         <div class="buttons">
-            <a class="btn btn-lg btn-primary" href="events.html" id="back_button" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Back</a>
-            <button class="btn btn-lg btn-primary" onclick="onLikeEvent()" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Interested!</button>
+<!--            <a class="btn btn-lg btn-primary" href="events.html" id="back_button" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Back</a>-->
+<!--            <button class="btn btn-lg btn-primary" onclick="onLikeEvent()" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Interested!</button>-->
         </div>
     </div>
 
